--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,20 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
+/dist/
+/tmp/
 
 # dependencies
-/node_modules
-/bower_components
+node_modules/
+bower_components/
 
 # misc
-/.sass-cache
+/.sass-cache/
 /connect.lock
-/coverage/*
-/libpeerconnection.log
-npm-debug.log*
-testem.log
+/coverage/
+/*.log
+/.env*
+
+# IDE
+/.idea/
+/*.iml
