--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
+    "ember-cli-chai": "^0.2.0",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-fastboot": "^1.0.0-beta.13",
@@ -27,7 +28,8 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
-    "ember-cli-qunit": "^3.0.1",
+    "ember-cli-mocha": "^0.13.0",
+    "ember-cli-mocha-reporter": "https://github.com/lolmaus/ember-cli-mocha-reporter.git#patch-1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.3",
