--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-cli": "2.10.0",
@@ -30,6 +31,7 @@
     "ember-cli-legacy-blueprints": "https://github.com/lolmaus/ember-cli-legacy-blueprints.git#standardjs",
     "ember-cli-mocha": "^0.13.0",
     "ember-cli-mocha-reporter": "https://github.com/lolmaus/ember-cli-mocha-reporter.git#patch-1",
+    "ember-cli-page-object": "^1.7.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.3",
@@ -39,7 +41,6 @@
     "ember-export-application-global": "^1.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
-    "ember-welcome-page": "^1.0.3",
     "eslint": "^3.11.1",
     "eslint-config-standard": "^6.2.1",
     "eslint-plugin-promise": "^3.4.0",
