--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-network": "^0.3.1",
     "ember-resolver": "^2.0.3",
+    "ember-sinon": "^0.6.0",
     "ember-truth-helpers": "^1.2.0",
     "eslint": "^3.11.1",
     "eslint-config-standard": "^6.2.1",
