--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "intercom-test-assignment",
   "dependencies": {
     "ember": "~2.10.0",
-    "ember-cli-shims": "0.1.3",
+    "ember-cli-shims": "~0.1.1",
     "ember-mocha-adapter": "~0.3.1",
     "url.js": "jillix/url.js#^2.4.0"
   }
