--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-eslint": "^7.1.1",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
+    "ember-awesome-macros": "^0.26.2",
     "ember-browserify": "^1.1.13",
     "ember-cli": "2.10.0",
     "ember-cli-app-version": "^2.0.0",
