--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-computed-decorators": "^0.2.2",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-leaflet": "^3.0.5",
     "ember-load-initializers": "^0.5.1",
     "ember-network": "^0.3.1",
     "ember-resolver": "^2.0.3",
