--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ember-cli-shims": "~0.1.1",
     "ember-mocha-adapter": "~0.3.1",
     "url.js": "jillix/url.js#^2.4.0",
-    "nprogress": "alexlafroscia/nprogress#allow-alternate-scheduler"
+    "nprogress": "alexlafroscia/nprogress#allow-alternate-scheduler",
+    "leaflet": "^1.0.0"
   }
 }
