--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "breakpoint-sass": "^2.7.1",
+    "breakpoint-slicer": "^2.0.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^2.4.1",
     "ember-awesome-macros": "^0.26.2",
@@ -24,6 +26,7 @@
     "ember-cli-app-version": "^2.0.0",
     "ember-cli-babel": "^5.1.7",
     "ember-cli-chai": "^0.2.0",
+    "ember-cli-code-coverage": "^0.3.8",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
     "ember-cli-htmlbars": "^1.0.10",
@@ -36,6 +39,7 @@
     "ember-cli-nprogress": "^0.1.2",
     "ember-cli-page-object": "^1.7.0",
     "ember-cli-release": "^0.2.9",
+    "ember-cli-sass": "^5.6.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
@@ -54,7 +58,8 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "loader.js": "^4.0.10",
-    "lodash": "^4.17.2"
+    "lodash": "^4.17.2",
+    "sass-toolkit": "^2.10.2"
   },
   "engines": {
     "node": ">= 0.12.0"
