--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-code-coverage": "^0.3.8",
     "ember-cli-dependency-checker": "^1.3.0",
     "ember-cli-eslint": "^3.0.0",
+    "ember-cli-fastboot": "^1.0.0-beta.13",
     "ember-cli-htmlbars": "^1.0.10",
     "ember-cli-htmlbars-inline-precompile": "^0.3.3",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -41,13 +42,14 @@
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.6.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-staticboot": "^0.1.3",
     "ember-cli-test-loader": "^1.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-composable-helpers": "^1.1.2",
     "ember-computed-decorators": "^0.2.2",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
-    "ember-leaflet": "^3.0.5",
+    "ember-leaflet": "https://github.com/cesarizu/ember-leaflet.git#fastboot",
     "ember-load-initializers": "^0.5.1",
     "ember-network": "^0.3.1",
     "ember-resolver": "^2.0.3",
