--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "ember-mocha-adapter": "~0.3.1",
     "url.js": "jillix/url.js#^2.4.0",
     "nprogress": "alexlafroscia/nprogress#allow-alternate-scheduler",
-    "leaflet": "^1.0.0"
+    "leaflet": "^1.0.0",
+    "showdown": "^1.5.1"
   }
 }
