--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "ember-cli-page-object": "^1.7.0",
     "ember-cli-release": "^0.2.9",
     "ember-cli-sass": "^5.6.0",
+    "ember-cli-showdown": "^2.9.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-staticboot": "^0.1.3",
     "ember-cli-test-loader": "^1.1.0",
@@ -49,6 +50,7 @@
     "ember-computed-decorators": "^0.2.2",
     "ember-data": "^2.10.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-fr-markdown-file": "^0.0.0",
     "ember-leaflet": "https://github.com/cesarizu/ember-leaflet.git#fastboot",
     "ember-load-initializers": "^0.5.1",
     "ember-network": "^0.3.1",
@@ -61,10 +63,14 @@
     "eslint-plugin-standard": "^2.0.1",
     "loader.js": "^4.0.10",
     "lodash": "^4.17.2",
-    "sass-toolkit": "^2.10.2"
+    "sass-toolkit": "^2.10.2",
+    "showdown": "^1.5.1"
   },
   "engines": {
     "node": ">= 0.12.0"
   },
-  "private": true
+  "private": true,
+  "fastbootDependencies": [
+    "showdown"
+  ]
 }
